# respire

./: .gitignore  README.md
.github/workflows/: ccpp.yml
src/: CMakeLists.txt  activity_log.cc  activity_log.h  attribution.txt  build.py  build.respire.py  build_targets.cc  build_targets.h  build_targets_test.cc  environment.cc  environment.h  error.h  file_exists_node.cc  file_exists_node.h  file_exists_node_test.cc  file_info_node.h  file_process_node.cc  file_process_node.h  file_process_node_test.cc  future.h  locked_node_storage.cc  locked_node_storage.h  main.cc  parse_deps.cc  parse_deps.h  prototype_respire_file.json  registry_node.cc  registry_node.h  registry_parser.cc  registry_parser.h  registry_parser_test.cc  registry_processor.cc  registry_processor.h  system_command_node.cc  system_command_node.h  system_command_node_params.h  test_system_command.cc  test_system_command.h
src/ebb/: .gitrepo  README.md
src/ebb/src/: CMakeLists.txt  build.respire.py  consumer.cc  consumer_test.cc  ebb.h  ebbpp.h  environment.cc  environment_test.cc  fiber_condition_variable.cc  fiber_condition_variable.h  linked_list.h  push_pull_consumer_test.cc  queue.cc  queue_test.cc  thread_pool.cc  thread_pool.h
src/ebb/src/lib/: batching.h  file_reader.cc  file_reader.h  file_reader_test.cc  json_string_view.cc  json_string_view.h  json_tokenizer.cc  json_tokenizer.h  json_tokenizer_test.cc  types.h
src/ebb/src/stdext/: .gitrepo
src/ebb/src/stdext/src/stdext/: file_system_test.cc  string_view.h
src/example/SimpleMultiSourceCPP/: build.py  build.respire.py  database.cc  database.h  main.cc
src/python/: flatten_output.py  json_utils.py  python_function_main.py  registry.py  registry_helpers.py  respire.py  respire_builder.py  respire_future.py  respire_python_wrapper_helpers.py  sub_respire.py  terminalsize.py  test_json_utils.py  utils.py
src/python/buildlib/respire/buildlib/: cc.py  copy_files.py  modules.py  run_with_timestamp.py  touch.py  utils.py
src/python/buildlib/respire/buildlib/cc_toolchains/: clang.py  deps_make_to_respire.py  discovery.py  gcc.py  jetson.py  msvc.py  raspi.py  wrap_ar_to_delete_first.py  wrap_cl_for_deps.py
src/python/buildlib/respire/buildlib/windows_utils/: copy.cmd
src/python/end_to_end_tests/: run_all_tests.py  shell_cat.py  shell_echo.py  test_single_function.py  test_subrespire.py  test_subrespire_external.py  test_utils.py
src/python/end_to_end_tests/test_single_function/: build_dynamic_dependency.respire.py  directory_as_input_function.respire.py  python_function.respire.py  single_function.respire.py  stdouterrin_function.respire.py
src/python/end_to_end_tests/test_subrespire/: add_numbers.respire.py  chain.respire.py  diamond.respire.py  double_input.respire.py  function_as_params.respire.py  futures_resolve.respire.py  object_as_params.respire.py
src/python/end_to_end_tests/test_subrespire_external/: can_pass_object_as_parameter.respire.py  cat_files.respire.py  generate_bar.respire.py  generate_foo.respire.py  get_foo_value.py  get_object_value.respire.py  simple_test_entry_point.respire.py  write_object_value_with_import.respire.py  write_object_value_without_import.respire.py
src/python/log_output/: event_filtering.py  in_place_terminal_output.py  log_command_output.py  log_processor.py  output_to.py  output_to_graph_view.py  output_to_log.py  output_to_raw.py  output_to_splitter.py  output_to_terminal_with_escape_codes.py
src/python/log_output/graph_view_assets/: data_state.js  event_fetcher.js  graph_view.js  index.html  legend.js  main.js  node_state.js  playback_controller.js  playback_controls_ui.js
src/python/log_output/graph_view_assets/color_schemes/: dark.css  light.css
